; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-88pm860x.c_pm860x_rtc_alarm_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-88pm860x.c_pm860x_rtc_alarm_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.pm860x_rtc_info = type { i32 }

@PM8607_RTC1 = common dso_local global i32 0, align 4
@ALARM_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @pm860x_rtc_alarm_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pm860x_rtc_alarm_irq_enable(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pm860x_rtc_info*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.pm860x_rtc_info* @dev_get_drvdata(%struct.device* %6)
  store %struct.pm860x_rtc_info* %7, %struct.pm860x_rtc_info** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.pm860x_rtc_info*, %struct.pm860x_rtc_info** %5, align 8
  %12 = getelementptr inbounds %struct.pm860x_rtc_info, %struct.pm860x_rtc_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @PM8607_RTC1, align 4
  %15 = load i32, i32* @ALARM_EN, align 4
  %16 = load i32, i32* @ALARM_EN, align 4
  %17 = call i32 @pm860x_set_bits(i32 %13, i32 %14, i32 %15, i32 %16)
  br label %25

18:                                               ; preds = %2
  %19 = load %struct.pm860x_rtc_info*, %struct.pm860x_rtc_info** %5, align 8
  %20 = getelementptr inbounds %struct.pm860x_rtc_info, %struct.pm860x_rtc_info* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @PM8607_RTC1, align 4
  %23 = load i32, i32* @ALARM_EN, align 4
  %24 = call i32 @pm860x_set_bits(i32 %21, i32 %22, i32 %23, i32 0)
  br label %25

25:                                               ; preds = %18, %10
  ret i32 0
}

declare dso_local %struct.pm860x_rtc_info* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @pm860x_set_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
